# HIMS-Project

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
HIMS-Scan-R1-Firmware/: platformio.ini
HIMS-Scan-R1-Firmware/src/app/: hims_scan_app.cpp  hims_scan_app.h
HIMS-Scan-R1-Firmware/src/config/: config.example.h
HIMS-Scan-R1-Firmware/src/gm65/: gm65_scanner.cpp  gm65_scanner.h
HIMS-Scan-R1-Firmware/src/keypad/: keypad.cpp  keypad.h
HIMS-Scan-R1-Firmware/tools/: ota_auth.py
HIMS-Software/: CMakeLists.txt
HIMS-Software/src/: App.h  app.cpp
HIMS-Software/src/app/: AppActions.cpp
HIMS-Software/src/core/: HimsScanProtocol.cpp  Inventory.h  InventoryHelpers.cpp  InventoryInternals.h  InventoryQuery.cpp  InventoryScan.cpp  InventorySerialization.cpp  InventoryStorage.cpp  RackAllocation.cpp
HIMS-Software/src/import/: DigiKeyCsvImport.cpp
HIMS-Software/src/label_printer/: LabelPrinter.cpp  LabelPrinter.h
HIMS-Software/src/platform/: Console.cpp  Console.h  DigiKeyApi.cpp  DigiKeyApi.h
HIMS-Software/src/ui/pages/: DashboardPage.cpp  DetailPage.cpp  HimsScanSetupPage.cpp  PrinterSetupPage.cpp  RackManagementPage.cpp  StockPage.cpp
HIMS-Software/src/ui/shared/: AppUiShared.cpp  AppUiShared.h
HIMS-Software/tests/: hims_tests.cpp
src/: App.h  app.cpp
src/core/: Inventory.cpp  Inventory.h
src/platform/: Console.cpp  Console.h  DigiKeyApi.cpp  DigiKeyApi.h  HttpServer.cpp  HttpServer.h
tests/: hims_tests.cpp
